--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -178,6 +178,7 @@ body {
     position: relative;
     z-index: 1;
     background: $body-bg;
+    box-shadow: 0 0 24px rgba(#000, 0.2);
 }
 
 .page-title {
