--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
@@ -88,7 +88,7 @@
 						<button class="pswp__button pswp-action pswp__button--zoom" title="Zoom in/out"></button>
 						<button class="pswp__button pswp-action pswp__button--fs" title="Toggle fullscreen"></button>
 					</div>
-					<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+					<button class="pswp__button pswp__button--close" title="Close (Esc)">&#215;</button>
 					<!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
 					<!-- element will get class pswp__preloader--active when preloader is running -->
 					<div class="pswp__preloader">
