--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
@@ -3,8 +3,8 @@
 
 <div class="offcanvas-cart-header">
     <div class="text-xs-right">
-        <button class="btn btn-link offcanvas-closer">
-            X
+        <button class="btn btn-secondary btn-flat btn-to-danger btn-lg btn-icon offcanvas-closer fs-h2" style="border-radius: 0">
+			&#215;
         </button>
     </div>
 
@@ -12,12 +12,9 @@
         @if (Model.ShoppingCartEnabled)
         {
             <li class="nav-item">
-                <a id="cart-tab" class="nav-link text-xs-center text-sm-left" data-toggle="tab" href="#occ-cart" role="tab" data-url="@Url.Action("OffCanvasShoppingCart", "ShoppingCart")">
-
-                    <i class="fa fa-shopping-basket hidden-sm-up"></i>
-                    
+                <a id="cart-tab" class="nav-link text-xs-center" data-toggle="tab" href="#occ-cart" role="tab" data-url="@Url.Action("OffCanvasShoppingCart", "ShoppingCart")">
+                    <i class="fa fa-shopping-basket hidden-md-up"></i>
                     <span class="title hidden-sm-down">@T("PageTitle.ShoppingCart")</span>
-                    &nbsp;
                     <span class="label label-warning" data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
 
                 </a>
@@ -27,12 +24,9 @@
         @if (Model.WishlistEnabled)
         {
             <li class="nav-item">
-                <a id="wishlist-tab" class="nav-link text-xs-center text-sm-left" data-toggle="tab" href="#occ-wishlist" role="tab" data-url="@Url.Action("OffCanvasWishlist", "ShoppingCart")">
-                    
-                    <i class="fa fa-heart-o hidden-sm-up"></i>
-
+                <a id="wishlist-tab" class="nav-link text-xs-center" data-toggle="tab" href="#occ-wishlist" role="tab" data-url="@Url.Action("OffCanvasWishlist", "ShoppingCart")">
+                    <i class="fa fa-heart-o hidden-md-up"></i>
                     <span class="title hidden-sm-down">@T("PageTitle.Wishlist")</span>
-                    &nbsp;
                     <span class="label label-warning" data-bind-to="TotalProducts">@Model.WishlistItems</span>
                 </a>
             </li>
@@ -41,12 +35,9 @@
         @if (Model.CompareProductsEnabled)
         {
             <li class="nav-item">
-                <a id="compare-tab" class="nav-link text-xs-center text-sm-left" data-toggle="tab" href="#occ-compare" role="tab" data-url="@Url.Action("OffCanvasCompare", "Catalog")">
-
-                    <i class="fa fa-retweet hidden-sm-up"></i>
-
+                <a id="compare-tab" class="nav-link text-xs-center" data-toggle="tab" href="#occ-compare" role="tab" data-url="@Url.Action("OffCanvasCompare", "Catalog")">
+                    <i class="fa fa-retweet hidden-md-up"></i>
                     <span class="title hidden-sm-down">@T("Products.Compare.Title")</span>
-                    &nbsp;
                     <span class="label label-warning" data-bind-to="Count">@Model.CompareItems</span>
                 </a>
             </li>
