--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -58,8 +58,8 @@
                 </div>
 
                 <div class="toolbar">
-                    <div class="qty-input">
-                        <input class="form-control input-sm" type="text" value="@item.EnteredQuantity"
+                    <div class="qty-input@(item.QuantityUnitName.HasValue() ? " has-postfix" : "")">
+                        <input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity"
                                data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="wishlist" data-sci-id="@item.Id" 
                                data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep"  />
                     </div>
