--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -19,7 +19,7 @@
                     itemClass += " alpha";
                 }
                 
-                <li class="@itemClass card text-xs-center">
+                <li class="@itemClass text-xs-center">
                     <figure class="picture pull-left pull-xs-none">
 						@if (item.Picture != null && item.Picture.ImageUrl.HasValue())
 						{
