--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -26,7 +26,7 @@
                     itemClass += " alpha";
                 }
 
-            <li class="@itemClass card text-xs-center" data-transfer-src="true">
+            <li class="@itemClass text-xs-center" data-transfer-src="true">
                 @if (Model.ShowProductImages)
                 {
                     <figure class="picture pull-left pull-xs-none">
