--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
@@ -1,4 +1,5 @@
 ﻿@model OffCanvasCartModel
+
 @using SmartStore.Web.Models.ShoppingCart;
 
 <div class="offcanvas-cart-header">
@@ -15,7 +16,7 @@
                 <a id="cart-tab" class="nav-link text-xs-center" data-toggle="tab" href="#occ-cart" role="tab" data-url="@Url.Action("OffCanvasShoppingCart", "ShoppingCart")">
                     <i class="fa fa-shopping-basket hidden-md-up"></i>
                     <span class="title hidden-sm-down">@T("PageTitle.ShoppingCart")</span>
-                    <span class="label label-warning" data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
+                    <span class="label label-pill label-warning" data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
 
                 </a>
             </li>
@@ -27,7 +28,7 @@
                 <a id="wishlist-tab" class="nav-link text-xs-center" data-toggle="tab" href="#occ-wishlist" role="tab" data-url="@Url.Action("OffCanvasWishlist", "ShoppingCart")">
                     <i class="fa fa-heart-o hidden-md-up"></i>
                     <span class="title hidden-sm-down">@T("PageTitle.Wishlist")</span>
-                    <span class="label label-warning" data-bind-to="TotalProducts">@Model.WishlistItems</span>
+                    <span class="label label-pill label-warning" data-bind-to="TotalProducts">@Model.WishlistItems</span>
                 </a>
             </li>
         }
@@ -38,7 +39,7 @@
                 <a id="compare-tab" class="nav-link text-xs-center" data-toggle="tab" href="#occ-compare" role="tab" data-url="@Url.Action("OffCanvasCompare", "Catalog")">
                     <i class="fa fa-retweet hidden-md-up"></i>
                     <span class="title hidden-sm-down">@T("Products.Compare.Title")</span>
-                    <span class="label label-warning" data-bind-to="Count">@Model.CompareItems</span>
+                    <span class="label label-pill label-warning" data-bind-to="Count">@Model.CompareItems</span>
                 </a>
             </li>
         }
